# rps-duel

./: pyproject.toml
rps_duel/: Graphics.py  Match.py  Player.py  __main__.py  interface.py
tests/: test_rps_duel.py
