[tool.poetry]
name = "rps-duel"
version = "0.1.0"
description = ""
authors = ["David Abreu <david.abreu@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
arcade = "^2.6.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
